keycloak/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingress
  namespace: auth
  labels:
    - "traefik.http.middlewares.test-stripprefix.stripprefix.prefixes=/auth"
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`auth2.cngei.it`)
      services:
        - kind: Service
          name: keycloak
          port: 8080
